--- a/STYLES/index.css
+++ b/STYLES/index.css
@@ -161,6 +161,7 @@ bg- color */
 .plant{
   max-width: 1140px;
   margin: 0 auto;
+  margin-bottom: 200px;
 }
 
 .plant-title-section{
@@ -190,6 +191,9 @@ bg- color */
   font-weight: bold;
   margin-bottom: 30px;
 }
+.plant-card> img {
+   width:100%;
+}
 
 
 
@@ -205,7 +209,7 @@ bg- color */
     height: 110%;
   }
   .header{
-    max-width: 520px;
+    max-width: 570px;
     margin: 0 auto;
   }
 
@@ -236,6 +240,31 @@ bg- color */
     margin-right: 16px;
     width:calc(100% - 32px);
   }
+
+  /* plant section */
+.plant{
+  max-width: 570px;
+   margin-top: 65px;
+}
+.plant-header{
+  font-size: 1.5rem;
+}
+.plant-description{
+  font-size: 0.875rem;
+  
+}
+.plant-title-section{
+  margin-bottom: 25px;
+}
+.plant-card-container{
+  margin-top: 0;
+  margin-left: 16px;
+  margin-right: 16px;
+  width:calc(100% - 32px);
+  grid-template-columns: repeat(2,1fr);
+  column-gap: 20px;
+  row-gap: 30px;
+}
 
  
  
