--- a/STYLES/index.css
+++ b/STYLES/index.css
@@ -319,25 +319,62 @@ padding-left: 30px;
   border-bottom: 2px solid #ffffff;
 }
 
- 
+/* join section */
 
-
-
+.join {
+ max-width: 1440px;
+ height: 540px;
+ margin: 0 auto;
+  background: linear-gradient(to left, rgba(7, 51, 79, 0.4), rgba(7, 51, 79, 0.5)),url('../assets/news-letter-bg.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+ align-items: center;
   
+}
 
+.container {
+  width:80%;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 
+}
 
+.join-heading {
+  color: #FFFFFF;
+  font-size: 2rem;
+}
 
+.input {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  
+}
 
+.input input[type="email"] {
+  padding: 12px 16px;
+  border: none;
+  font-size: 1rem;
+  width: 45%;
+  
+}
 
-
-
-
-
-
-
- 
-
+.subscribe {
+  background-color: #E95A08;
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  font-weight: 600;
+  font-size: 1rem;
+  
+}
 
 
 
@@ -492,6 +529,15 @@ padding-left: 30px;
   .card.zabo .card-content {
     font-size: 1.4rem;
   }
+}
+
+
+/* join section */
+.join{
+  max-height: 240px;
+}
+.join-heading{
+  font-size:1.25rem;
 }
 
 
